<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
 
  <groupId>org.ebayopensource.vjet.extmod.dltk.tests</groupId>
  <artifactId>org.eclipse.dltk.mod.core.tests</artifactId>
  <!--  <packaging>eclipse-test-plugin</packaging> -->
  <packaging>eclipse-plugin</packaging>
  <version>1.0.0-SNAPSHOT</version>
  <name>VJET Test: DLTK Core Tests</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <tycho-version>0.12.0</tycho-version>
    <vjet-version>1.0.0-SNAPSHOT</vjet-version>
  </properties>

  <repositories>
     <repository>
        <id>helios</id>
        <url>http://download.eclipse.org/releases/helios/</url>
        <layout>p2</layout>
     </repository>
     <repository>
        <id>orbit</id>
        <url>http://download.eclipse.org/tools/orbit/downloads/drops/R20100519200754/repository</url>
        <layout>p2</layout>
     </repository>
     <repository>
        <id>m2eclipse</id>
        <url>http://m2eclipse.sonatype.org/sites/m2e</url>
        <layout>p2</layout>
     </repository>

    <repository>
      <id>ebayopensource-releases</id>
      <name>eBayOpenSource Release Repository</name>
      <url>http://ph-0146.eva.ebay.com/nexus/content/repositories/releases</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>ebayopensource-snapshots</id>
      <name>eBayOpenSource Snapshots Repository</name>
      <url>http://ph-0146.eva.ebay.com/nexus/content/groups/all-snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>interval:30</updatePolicy>
        <checksumPolicy>warn</checksumPolicy>
      </snapshots>
    </repository>

  </repositories>

  <distributionManagement>
    <repository>
      <uniqueVersion>false</uniqueVersion>
      <id>ebayopensource-repo</id>
      <name>eBayOpenSource Release Repository</name>
      <url>http://ph-0146.eva.ebay.com/nexus/content/repositories/releases</url>
      <layout>default</layout>
    </repository>
    <snapshotRepository>
      <uniqueVersion>true</uniqueVersion>
      <id>ebayopensource-repo</id>
      <name>eBayOpenSource Snapshots Repository</name>
      <!--<url>http://ph-0146.eva.ebay.com/nexus/content/repositories/snapshots</url> -->
      <url>http://ph-0146.eva.ebay.com/nexus/content/groups/all-snapshots</url>
      <layout>default</layout>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <sourceDirectory>${project.basedir}/src</sourceDirectory>
    <plugins>
      <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-surefire-plugin</artifactId>
            <version>${tycho-version}</version>
            <configuration>
               <useUIHarness>true</useUIHarness>
               <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256M</argLine>
               <testFailureIgnore>true</testFailureIgnore>
            </configuration>
      </plugin>
      <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-maven-plugin</artifactId>
         <version>${tycho-version}</version>
         <extensions>true</extensions>
      </plugin>
      <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>target-platform-configuration</artifactId>
         <version>${tycho-version}</version>
         <configuration>
            <resolver>p2</resolver>
            <environments>
               <environment>
                  <os>linux</os>
                  <ws>gtk</ws>
                  <arch>x86</arch>
               </environment>
               <environment>
                  <os>win32</os>
                  <ws>win32</ws>
                  <arch>x86</arch>
               </environment>
               <environment>
                  <os>macosx</os>
                  <ws>cocoa</ws>
                  <arch>x86_64</arch>
               </environment>
            </environments>
         </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
      	<!-- tycho plugins -->
        <plugin>
           <groupId>org.eclipse.tycho</groupId>
           <artifactId>tycho-compiler-plugin</artifactId>
           <version>${tycho-version}</version>
           <configuration>
              <encoding>UTF-8</encoding>
              <source>1.6</source>
              <target>1.6</target>
           </configuration>
        </plugin>
        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
           <version>2.4.1</version>
           <configuration>
              <encoding>UTF-8</encoding>
           </configuration>
        </plugin>
        <plugin>
           <groupId>org.eclipse.tycho</groupId>
           <artifactId>tycho-packaging-plugin</artifactId>
           <version>${tycho-version}</version>
           <configuration>
              <archiveSite>true</archiveSite>
           </configuration>
        </plugin>
        <!-- Maven Plugins -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.5</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.1</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>jaxb2-maven-plugin</artifactId>
          <version>1.3</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>findbugs-maven-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>2.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>1.0-beta-1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>2.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>2.1-beta-1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.3</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>



